--- a/templates/artmath/index.html.twig
+++ b/templates/artmath/index.html.twig
@@ -24,5 +24,24 @@
 
     <h1> Résultat : </h1>
     <img src="{{fichier}}" width="100%">
+    <h1>Programme Python nees_carre.py</h1>
+    <h1>Paramètres :</h1>
+    <!-- C'est grâce à l'attribut name que l'on peut récupérer la valeur associée dans symfony -->
+    <form method="post" action="/calculer">
+        <div>
+            <label for="Dimension" class="form-label">Dimension</label>
+                <input type="range" class="form-range" min="0" max="1" step="0.1" id="dimension_ama" name="dimension_ama">
+                <input type="range" class="form-range" min="0" max="1" step="0.1" id="dimension_amr" name="dimension_amr">
+                <input type="range" class="form-range" min="0" max="6" step="1" id="dimension_nbc" name="dimension_nbc">
+                <input type="range" class="form-range" min="0" max="6" step="1" id="dimension_nbl" name="dimension_nbl">
+        </div>
+        <div>
+            <button type="submit" class="btn btn-primary" name="calculer_nees" value="1">Calculer</button>
+            <button type="submit" class="btn btn-danger" name="imprimer_nees" value="1">Imprimer</button>
+        </div>
+    </form>
+
+    <h1> Résultat : </h1>
+    <img src="{{fichier_nees}}" width="100%">
 </div>
 {% endblock %}
