--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -13,6 +13,7 @@
         {% endblock %}
 
         {% block javascripts %}
+        <script src="scripts.js"></script>
         {% endblock %}
     </head>
     <body>
