--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -19,4 +19,6 @@
     <body>
         {% block body %}{% endblock %}
     </body>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="scripts.js"></script>
 </html>
