--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -18,6 +18,22 @@
     </head>
     <body>
         {% block body %}{% endblock %}
+    <footer class="bg-secondary">
+        <div class="row">
+            <div class="col-6">
+                <h3>Réseaux</h3>
+                <a href="https://github.com/leonardo-heron" class="fa fa-github font-32"></a>
+                <a href="https://www.linkedin.com/in/leonardo-heron" class="fa fa-linkedin font-32"></a>
+            </div>
+            <div class="col-6">
+                <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/">
+                    <img class="align-right" alt="Licence Creative Commons" style="border-width:0" src="img/creative-commons.png">
+                </a><br />
+                Ce(tte) œuvre est mise à disposition selon les termes de la'|trans <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/"> Licence Creative Commons Attribution - Pas d'Utilisation Commerciale - Partage dans les Mêmes Conditions 4.0 International</a>..
+                </div>
+            </div>
+        </div>
+    </footer>
     </body>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="scripts.js"></script>
