--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -19,7 +19,7 @@
     <body>
         {% block body %}{% endblock %}
     <footer class="bg-secondary">
-        <div class="row bottom">
+        <div class="row d-flex justify-content">
             <div class="col-6">
                 <h3>Réseaux</h3>
                 <a href="https://github.com/leonardo-heron" class="fa fa-github font-32"></a>
