--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -10,6 +10,7 @@
             {# Utilise le style sketchy de bootswatch  #}
             {###########################################}
             <link href="https://bootswatch.com/5/sketchy/bootstrap.min.css" rel="stylesheet">
+            <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
         {% endblock %}
 
         {% block javascripts %}
@@ -21,7 +22,7 @@
     <footer class="bg-secondary">
         <div class="row d-flex justify-content mt-auto">
             <div class="col-6">
-                <h3>Réseaux</h3>
+                <h3>Contact</h3>
                 <a href="https://github.com/leonardo-heron" class="fa fa-github font-32"></a>
                 <a href="https://www.linkedin.com/in/leonardo-heron" class="fa fa-linkedin font-32"></a>
             </div>
