--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -10,7 +10,7 @@
             {# Utilise le style sketchy de bootswatch  #}
             {###########################################}
             <link href="https://bootswatch.com/5/sketchy/bootstrap.min.css" rel="stylesheet">
-            <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
+            <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.css">
         {% endblock %}
 
         {% block javascripts %}
