--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -10,11 +10,11 @@
             {# Utilise le style sketchy de bootswatch  #}
             {###########################################}
             <link href="https://bootswatch.com/5/sketchy/bootstrap.min.css" rel="stylesheet">
-            <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.css">
+            <link rel="stylesheet" href="css/font-awesome.css">
         {% endblock %}
 
         {% block javascripts %}
-        <script src="scripts.js"></script>
+        <script src="js/scripts.js"></script>
         {% endblock %}
     </head>
     <body>
@@ -37,5 +37,5 @@
     </footer>
     </body>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="scripts.js"></script>
+    <script src="js/scripts.js"></script>
 </html>
