--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -26,11 +26,8 @@
                 <a href="https://github.com/leonardo-heron" class="fa fa-github font-32"></a>
                 <a href="https://www.linkedin.com/in/leonardo-heron" class="fa fa-linkedin font-32"></a>
             </div>
-            <div class="col-6">
-                <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/">
-                    <img class="align-right" alt="Licence Creative Commons" style="border-width:0" src="img/creative-commons.png">
-                </a><br />
-                Ce(tte) œuvre est mise à disposition selon les termes de la'|trans <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/"> Licence Creative Commons Attribution - Pas d'Utilisation Commerciale - Partage dans les Mêmes Conditions 4.0 International</a>..
+                <div class="col-6">
+                    <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/"><img alt="Licence Creative Commons" style="border-width:0" src="https://i.creativecommons.org/l/by-nc-sa/4.0/88x31.png" /></a><br />Ce(tte) œuvre est mise à disposition selon les termes de la <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/">Licence Creative Commons Attribution - Pas d’Utilisation Commerciale - Partage dans les Mêmes Conditions 4.0 International</a>.
                 </div>
             </div>
         </div>  
