--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -21,9 +21,9 @@
         {% block body %}{% endblock %}
     <footer class="bg-secondary">
         <div class="row d-flex justify-content mt-auto">
-            <div class="col-6">
+            <div class="col-6 center">
                 <h3>Contact</h3>
-                <a href="https://github.com/leonardo-heron" class="fa fa-github font-32"></a>
+                <a href="https://github.com/leonardo-heron" class="fa fa-github font-32">   </a>
                 <a href="https://www.linkedin.com/in/leonardo-heron" class="fa fa-linkedin font-32"></a>
             </div>
                 <div class="col-6">
