--- a/templates/artmath/fig2.html.twig
+++ b/templates/artmath/fig2.html.twig
@@ -21,19 +21,11 @@
           <a class="nav-link" href="#">Nees_carres</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Pricing</a>
+          <a class="nav-link" href="#">Carres Latins</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">About</a>
+          <a class="nav-link" href="#">Mon compte rendu</a>
         </li>
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Dropdown</a>
-          <div class="dropdown-menu">
-            <a class="dropdown-item" href="#">Action</a>
-            <a class="dropdown-item" href="#">Another action</a>
-            <a class="dropdown-item" href="#">Something else here</a>
-            <div class="dropdown-divider"></div>
-            <a class="dropdown-item" href="#">Separated link</a>
           </div>
         </li>
       </ul>
@@ -52,9 +44,9 @@
             <label for="Harsardangle" class="form-label">Amplitude des rotations entre 0 et 1</label>
                 <input type="range" class="form-range" min="0" max="1" step="0.01" id="dimension_amr" name="dimension_amr">
             <label for="nombreligne" class="form-label">Nombre de lignes entre 0 et 50</label>
-                <input type="range" class="form-range" min="0" max="50" step="1" id="dimension_nbc" name="dimension_nbc">
+                <input type="range" class="form-range" min="1" max="50" step="1" id="dimension_nbc" name="dimension_nbc">
             <label for="nombreligne" class="form-label">Nombre de colonnes entre 0 et 50</label>
-                <input type="range" class="form-range" min="0" max="50" step="1" id="dimension_nbl" name="dimension_nbl">
+                <input type="range" class="form-range" min="1" max="50" step="1" id="dimension_nbl" name="dimension_nbl">
         </div>
         <div>
             <button type="submit" class="btn btn-primary" name="calculer_nees" value="1">Calculer</button>
