--- a/templates/artmath/home.html.twig
+++ b/templates/artmath/home.html.twig
@@ -35,7 +35,7 @@
           <a class="nav-link" href="/carres_latins">Carré Latins</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">About</a>
+          <a class="nav-link" href="#">Mon compte rendu</a>
       </ul>
     </div>
   </div>
