koch and not artmath

--- a/templates/artmath/fig2.html.twig
+++ b/templates/artmath/fig2.html.twig
@@ -13,7 +13,7 @@
     <div class="collapse navbar-collapse" id="navbarColor03">
       <ul class="navbar-nav me-auto">
         <li class="nav-item">
-          <a class="nav-link active" href="/artmath">Artmath
+          <a class="nav-link active" href="/artmath">Koch
             <span class="visually-hidden">(current)</span>
           </a>
         </li>
