--- a/templates/artmath/index.html.twig
+++ b/templates/artmath/index.html.twig
@@ -54,6 +54,7 @@
         <div>
             <label for="Dimension" class="form-label">Dimension</label>
                 <input type="range" class="form-range" min="0" max="6" step="1" id="dimension" name="dimension">
+                <p>Valeur: <span id="demo"></span></p>
         </div>
         <div>
             <button type="submit" class="btn btn-primary" name="calculer" value="1">Calculer</button>
@@ -65,4 +66,13 @@
     <img src="{{fichier}}" width="100%">
 
 </div>
+<script>
+var slider = document.getElementById("dimension");
+var output = document.getElementById("demo");
+output.innerHTML = slider.value;
+
+slider.oninput = function() {
+  output.innerHTML = this.value;
+}
+</script>
 {% endblock %}
