--- a/templates/artmath/fig2.html.twig
+++ b/templates/artmath/fig2.html.twig
@@ -41,12 +41,16 @@
         <div>
             <label for="Hasard" class="form-label">Amplitude du hasard entre 0 et 1</label>
                 <input type="range" class="form-range" min="0" max="1" step="0.01" id="dimension_ama" name="dimension_ama">
+                <p>Valeur: <span id="val_dim_ama"></span></p>
             <label for="Harsardangle" class="form-label">Amplitude des rotations entre 0 et 1</label>
                 <input type="range" class="form-range" min="0" max="1" step="0.01" id="dimension_amr" name="dimension_amr">
+                <p>Valeur: <span id="val_dim_amr"></span></p>
             <label for="nombreligne" class="form-label">Nombre de lignes entre 0 et 50</label>
                 <input type="range" class="form-range" min="1" max="50" step="1" id="dimension_nbc" name="dimension_nbc">
+                <p>Valeur: <span id="val_dim_nbc"></span></p>
             <label for="nombreligne" class="form-label">Nombre de colonnes entre 0 et 50</label>
                 <input type="range" class="form-range" min="1" max="50" step="1" id="dimension_nbl" name="dimension_nbl">
+                <p>Valeur: <span id="val_dim_nbl"></span></p>
         </div>
         <div>
             <button type="submit" class="btn btn-primary" name="calculer_nees" value="1">Calculer</button>
@@ -57,4 +61,27 @@
     <h1> Résultat : </h1>
     <img src="{{fichier_nees}}" width="100%">
 </div>
+<script>
+var slider = document.getElementById("dimension_ama");
+var output = document.getElementById("val_dim_ama");
+output.innerHTML = slider.value;
+var slider = document.getElementById("dimension_amr");
+var output = document.getElementById("val_dim_amr");
+output2.innerHTML = slider.value;
+var slider = document.getElementById("dimension_nbc");
+var output = document.getElementById("val_dim_nbc");
+output3.innerHTML = slider.value;
+var slider = document.getElementById("dimension_nbl");
+var output = document.getElementById("val_dim_nbl");
+output4.innerHTML = slider.value;
+
+
+slider.oninput = function() {
+  output.innerHTML = this.value;
+  output2.innerHTML = this.value;
+  output3.innerHTML = this.value;
+  output4.innerHTML = this.value;
+}
+
+</script>
 {% endblock %}
