--- a/templates/artmath/fig2.html.twig
+++ b/templates/artmath/fig2.html.twig
@@ -24,7 +24,7 @@
           <a class="nav-link" href="#">Carres Latins</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Mon compte rendu</a>
+          <a class="nav-link" href="SAE24_compte_rendu_final.pdf">Mon compte rendu</a>
         </li>
           </div>
         </li>
