--- a/templates/artmath/carre_latin.html.twig
+++ b/templates/artmath/carre_latin.html.twig
@@ -18,7 +18,7 @@
           </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Nees_carres</a>
+          <a class="nav-link" href="/fig2">Nees_carres</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">Carres Latins</a>
