--- a/templates/artmath/index.html.twig
+++ b/templates/artmath/index.html.twig
@@ -27,7 +27,7 @@
           <a class="nav-link" href="/fig2">Nees carres</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Carres Latins</a>
+          <a class="nav-link" href="/fig3">Carres Latins</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="SAE24_compte_rendu_final.pdf">Mon compte rendu</a>
