--- a/templates/artmath/home.html.twig
+++ b/templates/artmath/home.html.twig
@@ -74,6 +74,11 @@
       <img class="card-img-top" src="carre_latin.jpg" alt="Carres Latins">
       <div class="card-body">
         <h5 class="card-title">Carrés Latins</h5>
+        <form>
+          <a href="/fig3">
+        <input type="button" value="J'y vais !">
+          </a>
+        </form>
         <p class="card-text">Permet d'ouvrir la page pour générer l'oeuvre des Carrés Latins</p>
         <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
       </div>
