--- a/templates/artmath/fig2.html.twig
+++ b/templates/artmath/fig2.html.twig
@@ -49,8 +49,8 @@
                 <input type="range" class="form-range" min="1" max="50" step="1" id="dimension_nbl" name="dimension_nbl">
         </div>
         <div>
-            <button type="submit" class="btn btn-primary" name="calculer_nees" value="1">Calculer</button>
-            <button type="submit" class="btn btn-danger" name="imprimer_nees" value="1">Imprimer</button>
+            <button type="submit" class="btn btn-primary" name="calculer_nees" id="calculer_nees"value="1">Calculer</button>
+            <button type="submit" class="btn btn-danger" name="imprimer_nees" id="imprimer_nees"value="1">Imprimer</button>
         </div>
     </form>
 
