--- a/templates/artmath/carre_latin.html.twig
+++ b/templates/artmath/carre_latin.html.twig
@@ -44,7 +44,7 @@
         <label for="ech_lab">Echelle</label>
 		    <input type="text" name="ech" class="form-control" id="ech1" placeholder="Echelle">
         <label for="background">Couleur de fond</label>
-        <input type="color1" id="color1" name="Couleur de fond" value="#e66465">
+        <input type="color" id="color1" name="color1" value="#e66465">
         <div>
             <button type="submit" class="btn btn-primary" name="carre_latin" value="1">Afficher l'oeuvre</button>
         </div>
