--- a/templates/artmath/carre_latin.html.twig
+++ b/templates/artmath/carre_latin.html.twig
@@ -42,7 +42,7 @@
       <legend>Les paramètres des carrés latins</legend>
       <div class="form-group">
         <label for="ech_lab">Echelle</label><p>Valeur: <span id="val_ech"></span></p>
-        <input type="range" class="form-range" min="60" max="200" step="10" id="ech" name="ech">
+        <input type="range" class="form-range" min="60" max="200" step="10" id="ech1" name="ech">
         <select name="sens" id="sens">
           <option value="0">Sens de base</option>
           <option value="1">Sens inversé</option>
@@ -64,9 +64,9 @@
     <img src="{{ oeuvre }}" width="100%">
 </div>
 <script>
-var slider = document.getElementById("ech");
+var slider = document.getElementById("ech1");
 var output = document.getElementById("val_ech");
-output4innerHTML = slider4value;
+output.innerHTML = slider.value;
 
 slider.oninput = function() {
   output.innerHTML = this.value;
